--- a/price.html
+++ b/price.html
@@ -13,7 +13,8 @@
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik&display=swap"
+        rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
@@ -84,52 +85,56 @@
 
     <!-- Pricing Plan Start -->
     <div class="container-fluid py-5">
-        <div class="container pt-5 pb-3">
+        <div class="grid pt-5 pb-3">
             <h1 class="display-4 text-uppercase text-center mb-5">Precios</h1>
             <div class="row">
-                <div class="card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class="card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-1.jpg" data-lightbox="portfolio1">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
-                        <h5 class="text-uppercase">Archivo N°20  base tapa reforzarda</h5>
+                        <h5 class="text-uppercase">Archivo N°20 base tapa reforzarda</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 40x30x26</h6>
                         <p>$ 8.779 COP</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
                     </div>
                 </div>
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-2.jpg" data-lightbox="portfolio-2">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
                         <h5 class="text-uppercase">Cajas archivo letras negras</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 42*21*26</h6>
                         <p>$ 6.356 COP</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
                     </div>
                 </div>
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-7.jpg" data-lightbox="portfolio-3">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
                         <h5 class="text-uppercase">Caja archivo letras verdes</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 42*26*21</h6>
                         <p>$ 4.995 COP</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
                     </div>
                 </div>
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-3.jpg" data-lightbox="portfolio-4">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
                         <h5 class="text-uppercase">Cajas para pizza</h5>
                         <h6 class="text-uppercase text-body mb-5">
@@ -143,118 +148,129 @@
                             </select>
                         </h6>
                         <p>$ Por definir</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
                     </div>
 
                 </div>
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-8.jpg" data-lightbox="portfolio-5">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
                         <h5 class="text-uppercase">Caja espejo</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 13*4.5*32</h6>
                         <p>$ 1.815 COP</p>
-                         <p>IVA incluido</p> 
-                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
+                        <p>IVA incluido</p>
+                        <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
                     </div>
                 </div>
 
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-4.jpg" data-lightbox="portfolio-6">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
-                        <h5 class="text-uppercase">Caja maletín 2 botellas</h5>
+                        <h5 class="text-uppercase">Caja maletín 2 botella</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 24.5*9*31</h6>
                         <p>$ 1.829 COP</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
-                     </div>
+                    </div>
                 </div>
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-9.jpg" data-lightbox="portfolio-7">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
-                        <h5 class="text-uppercase">Caja maletín 1 botellas</h5>
+                        <h5 class="text-uppercase">Caja maletín 1 botella</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 16*8.5*30.5</h6>
                         <p>$ 1.489 COP</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
-                     </div>
+                    </div>
                 </div>
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-5.jpg" data-lightbox="portfolio-8">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
                         <h5 class="text-uppercase">Caja Lonchera pequeña</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 16*12*12</h6>
                         <p>$ 1.341 COP</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
-                     </div>
+                    </div>
                 </div>
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-5.jpg" data-lightbox="portfolio-9">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
                         <h5 class="text-uppercase">Caja Lonchera grande</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 22*14*16</h6>
                         <p>$ 1.760 COP</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
-                     </div>
+                    </div>
                 </div>
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-10.jpg" data-lightbox="portfolio-10">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
                         <h5 class="text-uppercase">Caja Cofre #3</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 25.5*18*10</h6>
                         <p>$ 2.032 COP</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
-                     </div>
+                    </div>
                 </div>
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-11.jpg" data-lightbox="portfolio-11">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
                         <h5 class="text-uppercase">Caja Cofre #2</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 24*19*10</h6>
                         <p>$ 1.489 COP</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
-                     </div>
+                    </div>
                 </div>
 
-                <div class=" card portfolio-btn d-flex align-items-center justify-content-center " style="width: 15rem;">  
+                <div class=" card portfolio-btn d-flex align-items-center justify-content-center "
+                    style="width: 18rem; margin: 0.5rem auto;">
                     <a href="img/portfolio-6.jpg" data-lightbox="portfolio-12">
                         <i class="fa fa-4x fa-plus text-primary"></i>
-                        </a>
+                    </a>
                     <div class="bg-light rounded text-center pt-2 mt-lg-2 mb-1">
                         <h5 class="text-uppercase">Caja Cofre #1</h5>
                         <h6 class="text-uppercase text-body mb-5">Medidas 28*18*9</h6>
                         <p>$ 1.502 COP</p>
-                        <p>IVA incluido</p> 
+                        <p>IVA incluido</p>
                         <a href="" class="btn btn-dark text-uppercase py-2 px-4 my-3">Haz tu orden</a>
-                     </div>
-                </div> 
+                    </div>
+                </div>
+
+
+            </div>
+
         </div>
-            
     </div>
     <!-- Pricing Plan End -->
 
@@ -277,8 +293,10 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-uppercase text-white mb-4">Ponerse en contacto</h4>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
-                <p><i class="fa fa-map-marker-alt text-white mr-2"></i>Cll 15 #7-115 Bg 33 Zona Industrial La Macarena Dosquebradas</p>
+                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et
+                </p>
+                <p><i class="fa fa-map-marker-alt text-white mr-2"></i>Cll 15 #7-115 Bg 33 Zona Industrial La
+                    Macarena Dosquebradas</p>
                 <p><i class="fa fa-phone-alt text-white mr-2"></i>+57 310 4420576</p>
                 <p><i class="fa fa-envelope text-white mr-2"></i>Fabricajas@hotmail.com</p>
             </div>
@@ -287,9 +305,11 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Inicio</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Nosotros</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Servicios</a>
+                    <a class="text-white-50 mb-2" href="#"><i
+                            class="fa fa-angle-right text-white mr-2"></i>Servicios</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Precios</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Exhibición</a>
+                    <a class="text-white-50 mb-2" href="#"><i
+                            class="fa fa-angle-right text-white mr-2"></i>Exhibición</a>
                     <a class="text-white-50" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Contactanos</a>
                 </div>
             </div>
@@ -309,7 +329,8 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #111111;">
-        <p class="mb-2 text-center text-white-50">&copy; <a href="#">Fabricajas.com</a>. Reservados todos los derechos.</p>
+        <p class="mb-2 text-center text-white-50">&copy; <a href="#">Fabricajas.com</a>. Reservados todos los
+            derechos.</p>
         <!-- <p class="m-0 text-center text-white-50">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p> -->
     </div>
     <!-- Footer End -->
@@ -333,4 +354,5 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
+
 </html>
